# MemMark

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.neo4j.yml  pyproject.toml  requirements.txt
memmark/backends/: amem_store.py  graphiti_store.py
memmark/baselines/: factory.py
memmark/benchmarks/locomo/: driver.py
memmark/examples/: run_locomo_full.py
memmark/experiments/: rq3_in_record.py
memmark/llm/: async_client.py  config.py  openai_client.py  watermarked.py
memmark/sdk/: memory_watermarker.py
memmark/verifier/: _common.py  in_record.py  partial_log.py
scripts/: run_locomo_amem.sh  run_locomo_graphiti.sh  run_locomo_smoke.sh
tests/: test_imports.py
tools/install_amem_eval/: README.md  install.py  setup.py
